# acousto-gen

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_v5.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_v4_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_v4_FINAL_COMPLETION_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  Dockerfile.production  GENERATION_1_COMPLETE.md  GENERATION_2_COMPLETE.md  GENERATION_3_COMPLETE.md  GENERATION_4_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_CHARTER.md  README.md  SDLC_COMPLETION_REPORT.md  SECURITY.md  SECURITY_REVIEW.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  advanced_neural_hologram_synthesis.py  advanced_quality_gates.py  autonomous_research_validation.py  (+73 more)
.devcontainer/: devcontainer.json  setup.sh  startup.sh
.github/: PULL_REQUEST_TEMPLATE.md  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  acousto-gen-deployment.yml
.terragon/: config.yaml  value-metrics.json
acousto_gen/: __init__.py  cli.py  core.py  mock_backend.py  safety.py  type_compat.py
autonomous_sdlc_artifacts/: implementation_status.json  project_analysis.json  technology_assessment.json
autonomous_sdlc_reports/: sdlc_failure_report_1755056844.json
deployment/: production_deployment_guide.md
deployment_artifacts/acousto-staging-e7741a82/: .dockerignore  Dockerfile  api_config.json  configmap.json  deployment.json  deployment_summary.json  ingress.json  secret.json  service.json
docs/: IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md
docs/adr/: 0001-pytorch-for-gpu-acceleration.md  0002-pytorch-gpu-acceleration.md  template.md
docs/architecture/: OVERVIEW.md
docs/deployment/: DEPLOYMENT_GUIDE.md  ci-cd-workflows.md  docker-guide.md  github-actions-setup.md
docs/guides/: getting-started.md
docs/monitoring/: README.md
docs/runbooks/: emergency-stop.md  pressure-exceeded.md
docs/testing/: README.md
docs/workflows/: README.md  SETUP_REQUIRED.md
k8s/development/: deployment.yaml  ingress.yaml  service.yaml
k8s/production/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
k8s/staging/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
monitoring/prometheus/: prometheus.yml
research_data/: optimization_1755056849.json  optimization_1755056849_report.json
scripts/: deploy.sh
scripts/automation/: update_dependencies.py
scripts/maintenance/: cleanup.py
scripts/metrics/: collect_metrics.py
src/: autonomous_sdlc_executor.py  core_enhancements.py  global_compliance_system.py  main.py  performance_scaling_system.py  reliability_system.py
src/acoustic_logging/: logger_config.py
src/api/: main.py
src/database/: __init__.py  connection.py  models.py  repositories.py
src/distributed/: __init__.py  cluster_manager.py
src/global/: intelligent_compliance_engine.py
src/infrastructure/: auto_scaling.py  auto_scaling_orchestrator.py
src/models/: acoustic_field.py  neural_hologram_generator.py
src/monitoring/: comprehensive_monitoring.py  health_checks.py  metrics.py  system_monitor.py
src/optimization/: cache.py  generation4_ai_integration.py  hologram_optimizer.py  neural_hologram_synthesis.py  parallel_computing.py
src/performance/: __init__.py  adaptive_performance_optimizer.py  caching.py  concurrent.py  gpu_acceleration_engine.py  gpu_accelerator.py
src/recovery/: error_recovery.py
src/reliability/: __init__.py  advanced_error_handler.py  comprehensive_error_handling.py  error_recovery.py
src/research/: __init__.py  adaptive_ai_optimizer.py  autonomous_researcher.py  comparative_study.py  quantum_hologram_optimizer.py
src/safety/: __init__.py  safety_manager.py  safety_monitor.py
src/scalability/: __init__.py  auto_scaling_system.py  distributed_computing_engine.py  distributed_optimization.py
src/security/: __init__.py  access_control.py  advanced_security_framework.py  (+2 more)
tests/: __init__.py  conftest.py  test_advanced_ai_systems.py  test_cli.py  test_config.py  test_core.py  test_integration.py  test_performance.py  test_safety_validation.py  test_wave_propagator.py
(+31 files in other folders)
